force-app/main/default/objects/Flyers__c/Flyers__c.object-meta.xml
<CustomObject>
    <label>Building Flyer</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Flyer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flyers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>