force-app/main/default/objects/Flyers__c/fields/Active_or_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Active_or_Inactive__c</fullName>
    <label>Active or Inactive</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>