force-app/main/default/objects/Flyers__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipName>Flyers</relationshipName>
    <type>Lookup</type>
</CustomField>