force-app/main/default/objects/Flyers__c/fields/File_Location__c.field-meta.xml
<CustomField>
    <fullName>File_Location__c</fullName>
    <inlineHelpText>Upload Flyer below, open the PDF in Salesforce by clicking on the link, click the Public Link button at the top of the page, click Create Link, Copy Link, and paste into this field</inlineHelpText>
    <label>File Location</label>
    <type>Url</type>
</CustomField>