force-app/main/default/objects/Flyers__c/fields/Flyer_Date__c.field-meta.xml
<CustomField>
    <fullName>Flyer_Date__c</fullName>
    <inlineHelpText>Input date you received flyer from source</inlineHelpText>
    <label>Flyer Date</label>
    <type>Date</type>
</CustomField>