force-app/main/default/objects/Flyers__c/fields/Flyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Flyer_Type__c</fullName>
    <label>Flyer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Sublease</fullName>
            </value>
            <value>
                <fullName>Coworking</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Direct and Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>